<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">


    <ListView
        android:id="@+id/list"
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyyield4"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

    </ListView>

    <TextView
        android:id="@+id/date4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="30dp"
        android:text="@string/Date"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/power4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/Powers"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/dailyyield4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:text="@string/Dailyyields"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <TextView
        android:id="@+id/label"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/PV4Log"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>