<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">


    <ListView
        android:id="@+id/list"
        android:layout_width="388dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="13dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyyield"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

    </ListView>

    <TextView
        android:id="@+id/PV3_Date_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="19dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/power"
        app:layout_constraintTop_toTopOf="@+id/power" />

    <TextView
        android:id="@+id/label"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/PV1Log"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/PV3_Date_Value"
        app:layout_constraintStart_toStartOf="@+id/PV3_Date_Value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:text="@string/Date"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/label"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <TextView
        android:id="@+id/power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="26dp"
        android:text="@string/Powers"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toStartOf="@+id/dailyyield" />

    <TextView
        android:id="@+id/dailyyield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/Dailyyields"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

</android.support.constraint.ConstraintLayout>