<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/Date_Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lastupdate" />

    <TextView
        android:id="@+id/label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/ChargeControllers"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PV3Port2_BatteryVolt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:text="@string/PV3_BV"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/BatteryVolt_Value2"
        app:layout_constraintStart_toStartOf="@+id/PV3Port2_Power"
        app:layout_constraintTop_toTopOf="@+id/BatteryVolt_Value2" />

    <TextView
        android:id="@+id/PV3Port2_Power"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="51dp"
        android:text="@string/PV3_Power"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Power_Value"
        app:layout_constraintEnd_toStartOf="@+id/Power_Value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Power_Value" />

    <TextView
        android:id="@+id/BatteryVolt_Value2"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="183dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textClock"
        app:layout_constraintStart_toEndOf="@+id/textClock"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Power_Value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PV3Port2_Power"
        app:layout_constraintTop_toBottomOf="@+id/BatteryVolt_Value2" />

    <TextView
        android:id="@+id/PV3Port2_VACin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/PV3_VACin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/PV3Port2_Power"
        app:layout_constraintStart_toStartOf="@+id/PV3Port2_Power"
        app:layout_constraintTop_toBottomOf="@+id/PV3Port2_Power" />

    <TextView
        android:id="@+id/VACin_Value2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/Power_Value"
        app:layout_constraintStart_toStartOf="@+id/Power_Value"
        app:layout_constraintTop_toBottomOf="@+id/Power_Value" />

    <TextView
        android:id="@+id/Lastupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="123dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="58dp"
        android:text="@string/LastUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Date_Value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginBottom="49dp"
        android:layout_marginTop="44dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/PV3Port2_BatteryVolt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

</android.support.constraint.ConstraintLayout>